--- a/views/user/register.ejs
+++ b/views/user/register.ejs
@@ -9,18 +9,45 @@
 <body>
     <header class="topbar">
         <nav class="navbar">
-            <div class="logo">
-                <h4>es<span>_</span>coole</h4>
-            </div>
-            <div class="navlink">
-                <ul>
-                    <li> <a href="#">Conection</a> </li>
-                    <li> <a href="#">Register</a> </li>
-                    <li> <a href="#">Offre</a> </li>
-                    <li> <a href="#">Cour</a> </li>
-                </ul>
-            </div>
+            <a href="#">Acueille</a>
+            <a href="#" class= "active">Inscription</a>
+            <a href="#">Connection</a>
+            <a href="#">Offres</a>
+            <a href="#">Apropos</a>
         </nav>
+        <div class="recherche">
+            <form action="" method="post">
+                <input type="text" name="recherche" id="recherche">
+                <input type="submit" value="submit">
+            </form>
+        </div>
+        <hr class="hr">
     </header>
+    <main class="main">
+
+    </main>
+    <aside class="sidebar">
+        <div class="" ></div>
+        <h4 class="sidebar-title"> Formation </h4>
+        <ul>
+            <li><a href="#">developpement d'aplication et e-service</a></li>
+            <li><a href="#"> Reseau et securité informatique</a></li>
+            <li><a href="#"> multimedia et are du numerique</a></li>
+            <li><a href="#"> base de donne </a></li>
+            <li><a href="#">communication digitale </a></li>
+        </ul>
+        <hr>
+        <h4 class="sidebar-title"> niveau d'etude </h4>
+        <ul>
+            <li><a href="#">Licence 1</a></li>
+            <li><a href="#">Licence 2</a></li>
+            <li><a href="#">Licence 3</a></li>
+            <li><a href="#">Master 1 </a></li>
+            <li><a href="#">Master 2 </a></li>
+        </ul>
+    </aside>
+    <footer class="footer">
+        crée par Kevin voli
+    </footer>
 </body>
 </html>
