--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,53 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+    <link rel="stylesheet" href="/stylesheets/register.css">
+    <title>Document</title>
+</head>
+<body>
+    <header class="topbar">
+        <nav class="navbar">
+            <a href="#">Acueille</a>
+            <a href="#" class= "active">Inscription</a>
+            <a href="#">Connection</a>
+            <a href="#">Offres</a>
+            <a href="#">Apropos</a>
+        </nav>
+        <div class="recherche">
+            <form action="" method="post">
+                <input type="text" name="recherche" id="recherche">
+                <input type="submit" value="submit">
+            </form>
+        </div>
+        <hr class="hr">
+    </header>
+    <main class="main">
+    </main>
+    <aside class="sidebar">
+      <div class="" ></div>
+      <h4 class="sidebar-title"> Formation </h4>
+      <ul>
+          <li><a href="#">developpement d'aplication et e-service</a></li>
+          <li><a href="#"> Reseau et securité informatique</a></li>
+          <li><a href="#"> multimedia et are du numerique</a></li>
+          <li><a href="#"> base de donne </a></li>
+          <li><a href="#">communication digitale </a></li>
+      </ul>
+      <hr>
+      <h4 class="sidebar-title"> niveau d'etude </h4>
+      <ul>
+          <li><a href="#">Licence 1</a></li>
+          <li><a href="#">Licence 2</a></li>
+          <li><a href="#">Licence 3</a></li>
+          <li><a href="#">Master 1 </a></li>
+          <li><a href="#">Master 2 </a></li>
+      </ul>
+  </aside>
+  <footer class="footer">
+      crée par Kevin voli
+  </footer>
+</body>
 </html>
