--- a/views/user/register.ejs
+++ b/views/user/register.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="stylesheet" href="/stylesheets/register.css">
     <title>Document</title>
 </head>
 <body>
@@ -24,30 +25,36 @@
         <hr class="hr">
     </header>
     <main class="main">
-
+        <div class="register">
+            <div class="form-contener">
+                <form action="" method="post">
+                    <div><h3>Inscription</h3></div>
+                    <div class="input-contener">
+                        <label for="name">nom</label>
+                        <input type="text" name="name" id="name">
+                    </div>
+                    <div class="input-contener"><label for="prenom">prenom</label>
+                        <input type="text" name="prenom" id="prenom"></div>
+                    <div class="input-contener">
+                        <label for="naissence">date de naissence</label>
+                    <input type="date" name="naissence_etud" id="naissence">
+                    </div>
+                    <div class="input-contener">
+                        <label for="mail">email</label>
+                    <input type="email" name="mail" id="mail">
+                    </div>
+                    <div class="input-contener">
+                        <label for="password">password</label>
+                    <input type="password" name="password" id="password">
+                    </div>
+                    <div class="input-contener">
+                    <input type="submit" value="submit">
+                    </div>
+                    
+                    
+                </form>
+            </div>
+        </div>
     </main>
-    <aside class="sidebar">
-        <div class="" ></div>
-        <h4 class="sidebar-title"> Formation </h4>
-        <ul>
-            <li><a href="#">developpement d'aplication et e-service</a></li>
-            <li><a href="#"> Reseau et securité informatique</a></li>
-            <li><a href="#"> multimedia et are du numerique</a></li>
-            <li><a href="#"> base de donne </a></li>
-            <li><a href="#">communication digitale </a></li>
-        </ul>
-        <hr>
-        <h4 class="sidebar-title"> niveau d'etude </h4>
-        <ul>
-            <li><a href="#">Licence 1</a></li>
-            <li><a href="#">Licence 2</a></li>
-            <li><a href="#">Licence 3</a></li>
-            <li><a href="#">Master 1 </a></li>
-            <li><a href="#">Master 2 </a></li>
-        </ul>
-    </aside>
-    <footer class="footer">
-        crée par Kevin voli
-    </footer>
 </body>
 </html>
