retoushe du models

--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -29,32 +29,28 @@
     <main class="main">
       <div class="table-contener"> 
         <table class="table">
-          <thead>
+          <thead class="thead-dark">
             <tr>
-              <th scope="col">#</th>
-              <th scope="col">First</th>
-              <th scope="col">Last</th>
-              <th scope="col">Handle</th>
+              <th>Nom</th>
+              <th>Prénom</th>
+              <th>Age</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <th scope="row">1</th>
-              <td>Mark</td>
-              <td>Otto</td>
-              <td>@mdo</td>
+              <td>Giraud</td>
+              <td>Pierre</td>
+              <td>28</td>
             </tr>
             <tr>
-              <th scope="row">2</th>
-              <td>Jacob</td>
-              <td>Thornton</td>
-              <td>@fat</td>
+              <td>Durand</td>
+              <td>Victor</td>
+              <td>26</td>
             </tr>
             <tr>
-              <th scope="row">3</th>
-              <td>Larry</td>
-              <td>the Bird</td>
-              <td>@twitter</td>
+              <td>Joly</td>
+              <td>Julia</td>
+              <td>27</td>
             </tr>
           </tbody>
         </table>
