--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -1,63 +1,72 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link rel='stylesheet' href='/stylesheets/admin.css' />
-
-    <title>Document</title>
-</head>
-<body>
-    <header class="topbar">
-        <nav class="navbar">
-            <a href="#">Acueille</a>
-            <a href="/users/register" class= "active">Inscription</a>
-            <a href="#">Connection</a>
-            <a href="#">Offres</a>
-            <a href="#">Apropos</a>
-        </nav>
-        <div class="recherche">
-            <form action="" method="post">
-                <input type="text" name="recherche" id="recherche">
-                <input type="submit" value="submit">
-            </form>
-        </div>
-        <hr class="hr">
-    </header>
+<%- include('../partials/header') %>
     <main class="main">
       <div class="table-contener"> 
-        <table class="table">
+        <table class="table table-striped">
+          <h3>liste des univercite </h3>
           <thead class="thead-dark">
             <tr>
               <th>Nom</th>
-              <th>Prénom</th>
-              <th>Age</th>
+              <th>UFR</th>
+              <th>Nombre de cour</th>
+              <th colspan="3">Action</th>
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <td>Giraud</td>
-              <td>Pierre</td>
-              <td>28</td>
-            </tr>
-            <tr>
-              <td>Durand</td>
-              <td>Victor</td>
-              <td>26</td>
-            </tr>
-            <tr>
-              <td>Joly</td>
-              <td>Julia</td>
-              <td>27</td>
-            </tr>
+            <% univercites.forEach(function(univercite){ %>
+              <tr>
+                <td><%= univercite.nom %></td>
+                <td><%= univercite.ufr %></td>
+                <td>28</td>
+                <td class="bg-danger"><a href="/admin/delete/<%=univercite.id %>">suprime</a></td>
+                <td class="bg-success"><a href="/admin/update/<%=univercite.id %>">modifie</a></td>
+                <td class="bg-primary"><a href="/admin/detail/<%=univercite.id %>">details</a></td>
+              </tr>
+            <% }) %>
+           
           </tbody>
         </table>
       </div>
         
     </main>
+    <aside class="sidebar">
+      <% if (locals.update){ %>
+        <div>
+          <h3>modifie l'univercité</h3>
+          <form action="" method="post">
+            <div>
+              <label for="nom"> nom de l'univercite</label>
+            <input type="text" name="nom" id="nom" value="<%= update.nom %>">
+            </div>
+            <div>
+              <label for="urf">ufr </label>
+              <input type="text" name="ufr" id="ufr" value="<%= update.ufr %>" >
+            </div>
+            <div>
+              <input type="submit" value="submit">
+            </div>
+          </form>
+        </div>
+      
+      <% } else { %>
+        <div>
+          <form action="" method="post">
+            <div>
+              <label for="nom"> nom de l'univercite</label>
+            <input type="text" name="nom" id="nom">
+            </div>
+            <div>
+              <label for="urf">ufr </label>
+              <input type="text" name="ufr" id="ufr">
+            </div>
+            <div>
+              <input type="submit" value="submit">
+            </div>
+          </form>
+        </div>
+      <%} %>
+     
+    </aside>
   <script src="/javascripts/jquery-3.5.1.min.js"></script>
-  <script src="bootstrap/js/bootstrap.min.js"></script>
+  <script src="/bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
