--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='/stylesheets/admin.css' />
+
     <title><%= page %></title>
 </head>
 <body>
     <header class="topbar">
         <nav class="navbar">
-            <a href="#">Acueille</a>
-            <a href="#" class= "active">Inscription</a>
-            <a href="#">Connection</a>
-            <a href="#">Offres</a>
-            <a href="#">Apropos</a>
+            <% for( var navs in nav){ %>
+                <a href="/<%=lienP%>/<%=navs%>"><%= navs %></a>
+              <% } %> 
         </nav>
         <div class="recherche">
             <form action="" method="post">
@@ -23,7 +24,3 @@
         </div>
         <hr class="hr">
     </header>
-    <main class="main">
-    </main>
-</body>
-</html>
