--- a/views/user/register.ejs
+++ b/views/user/register.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel="stylesheet" href="/stylesheets/register.css">
-    <title>Document</title>
+    <title><%= page %></title>
 </head>
 <body>
     <header class="topbar">
