interface admin debut

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="stylesheet" href="/stylesheets/main.css">
     <link rel='stylesheet' href='/stylesheets/admin.css' />
 
     <title><%= page %></title>
@@ -24,3 +24,4 @@
         </div>
         <hr class="hr">
     </header>
+    <div style="margin-bottom: 350px;"></div>
