--- a/views/admin/formation.ejs
+++ b/views/admin/formation.ejs
@@ -1,1 +1,32 @@
 <%- include('../partials/header') %>
+
+<main class="main">
+    <div class="table-contener"> 
+      <table class="table table-striped">
+        <h3>liste des univercite </h3>
+        <thead class="thead-dark">
+          <tr>
+            <th>Nom</th>
+            <th>UFR</th>
+            <th>Nombre de cour</th>
+            <th colspan="3">Action</th>
+            <th ><a href="/admin/formation/add">Ajouter</a></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% formations.forEach(function(univercite){ %>
+            <tr>
+              <td><%= univercite.nom %></td>
+              <td><%= univercite.ufr %></td>
+              <td>28</td>
+              <td class="bg-danger"><a href="/admin/delete/<%=univercite.id %>">suprime</a></td>
+              <td class="bg-success"><a href="/admin/update/<%=univercite.id %>">modifie</a></td>
+              <td class="bg-primary"><a href="/admin/detail/<%=univercite.id %>">details</a></td>
+            </tr>
+          <% }) %>
+         
+        </tbody>
+      </table>
+    </div>
+      
+  </main>
